--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h1>Willkommen auf meiner Seite</h1>
+
+    <p>um Dateien auf Sever hochzuladen, muss ich beim erstemal git ftp init verwenden</p>
+    <p>dann nur noch git ftp push (ist schon im script enthalten)</p>
     
 </body>
 </html>
